--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+xrdp-xorg (0.2.5+git080206~5efd502) xenial; urgency=low
+  * update source from https://github.com/neutrinolabs/xorgxrdp/tree/devel, 5efd502
+
+ -- Fajar A. Nugraha <ubuntu-ppa@fajar.net>  Tue, 06 Feb 2018 02:34:00 +0700
+
 xrdp-xorg (0.1.0+git161203~f42f7a2) xenial; urgency=low
   * initial packge
   * source from https://github.com/neutrinolabs/xorgxrdp/tree/devel, f42f7a2
